# c-logger

./: .gitignore  CMakeLists.txt  README.md
include/: logger.h
src/: logger.h  main.c  sample.c
